# ark-segmentlookup-local

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
bench/end_to_end/: Cargo.toml
bench/end_to_end/src/: main.rs  parameters.rs
benches/end_to_end/: Cargo.toml  all_lookup_mac_bls12_381.txt  all_lookup_tower_bls12_381.txt  all_lookup_tower_bn254.txt  all_setup_tower.txt  cpu4_lookup_v2.txt  large_batch_lookup_cpu6.txt  run.sh
benches/end_to_end/src/: main.rs
src/: domain.rs  error.rs  kzg.rs  lagrange_basis.rs  lib.rs  multi_unity.rs  prover.rs  public_parameters.rs  rng.rs  table.rs  toeplitz.rs  transcript.rs  verifier.rs  witness.rs
tests/end_to_end/src/: parameters.rs
