[package]
name = "ark-segmentlookup"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-ec = "0.4.2"
ark-std = "0.4.0"
sha3 = "0.10.6"
ark-serialize = { version = "0.4.2", default-features = false, features = ["derive"] }
merlin = { version = "3.0.0" }
rayon = "1.10"

[dev-dependencies]
ark-bn254 = "0.4.0"
