[package]
name = "ark-segmentlookup"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = { version = "0.4.2", features = ["parallel"] }
ark-poly = { version = "0.4.2", features = ["parallel"] }
ark-ec = { version = "0.4.2", features = ["parallel"] }
ark-std = { version = "0.4.0", features = ["parallel"] }
sha3 = "0.10.6"
ark-serialize = { version = "0.4.2", default-features = false, features = ["derive"] }
merlin = { version = "3.0.0" }
rayon = "1.10"
dashmap = { version = "6.1.0", features = ["rayon"] }

[dev-dependencies]
ark-bn254 = "0.4.0"
